# Modern_CPP_HW_1_B

./: CMakeLists.txt  build.sh  install.sh
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_cmake/src/: Makefile  cmake_install.cmake  test_ipb_arithmetic
src/: CMakeLists.txt
